--- a/hackbeanpot/pubspec.yaml
+++ b/hackbeanpot/pubspec.yaml
@@ -30,6 +30,12 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  http: ^0.13.5
+  spotify_sdk: ^2.3.1
+  geolocator: ^9.0.2
+  firebase_core: ^2.10.0
+  firebase_auth: ^4.4.2
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
