--- a/hackbeanpot/pubspec.yaml
+++ b/hackbeanpot/pubspec.yaml
@@ -65,6 +65,9 @@ flutter:
   assets:
     - lib/images/google.png
     - lib/images/apple.png
+    - lib/images/trip_1.jpg
+    - lib/images/trip_2.jpg
+    - lib/images/trip_3.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
