--- a/hackbeanpot/pubspec.yaml
+++ b/hackbeanpot/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^5.4.2
   google_sign_in: ^6.2.2
   google_fonts: ^4.0.4
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
