--- a/hackbeanpot/pubspec.yaml
+++ b/hackbeanpot/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   google_sign_in: ^6.2.2
   google_fonts: ^4.0.4
 
+  mapbox_gl: ^0.16.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
