--- a/hackbeanpot/ios/Runner/Info.plist
+++ b/hackbeanpot/ios/Runner/Info.plist
@@ -52,9 +52,9 @@
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
 	<string>We need your location to show nearby places.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
-	<string>We need access to your photo library to select profile and banner images.</string>
+	<string>We need access to photo library to update profile and banner images</string>
 	<key>NSCameraUsageDescription</key>
-	<string>We need access to your camera to take profile and banner pictures.</string>
+	<string>We need access to camera to update profile and banner images</string>
 	<key>io.flutter.embedded_views_preview</key>
 	<true/>
 </dict>
