--- a/hackbeanpot/pubspec.yaml
+++ b/hackbeanpot/pubspec.yaml
@@ -31,14 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.5
-
+  image_picker: ^1.0.7
+  image_cropper: ^1.4.0
   geolocator: ^9.0.2
   cupertino_icons: ^1.0.8
   firebase_core: ^3.11.0
   firebase_auth: ^5.4.2
   google_sign_in: ^6.2.2
   google_fonts: ^4.0.4
-  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
@@ -63,8 +63,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - lib/images/google.png
-    - lib/images/apple.png
+    - lib/images/banner_img.jpg
+    - lib/images/profile.jpg
     - lib/images/trip_1.jpg
     - lib/images/trip_2.jpg
     - lib/images/trip_3.jpg
