--- a/hackbeanpot/android/settings.gradle
+++ b/hackbeanpot/android/settings.gradle
@@ -19,18 +19,11 @@ pluginManagement {
 plugins {
     id "dev.flutter.flutter-plugin-loader" version "1.0.0"
     id "com.android.application" version "8.2.1" apply false
-    id "com.google.gms.google-services" version "4.3.15" apply false
+    id "com.android.library" version "8.2.1" apply false
     id "org.jetbrains.kotlin.android" version "1.8.22" apply false
 }
 
-def flutterSdkPath = {
-    def properties = new Properties()
-    file("local.properties").withInputStream { properties.load(it) }
-    def flutterSdkPath = properties.getProperty("flutter.sdk")
-    assert flutterSdkPath != null, "flutter.sdk not set in local.properties"
-    return flutterSdkPath
-}()
-
-apply from: "${flutterSdkPath}/packages/flutter_tools/gradle/app_plugin_loader.gradle"
+include ':mapbox_maps_flutter'
+project(':mapbox_maps_flutter').projectDir = new File(rootProject.projectDir, '.android/Flutter/ephemeral/.plugin_symlinks/mapbox_maps_flutter/android')
 
 include ":app"
