--- a/hackbeanpot/pubspec.yaml
+++ b/hackbeanpot/pubspec.yaml
@@ -39,8 +39,12 @@ dependencies:
   firebase_auth: ^5.4.2
   google_sign_in: ^6.2.2
   google_fonts: ^4.0.4
-
-  mapbox_gl: ^0.16.0
+  google_maps_flutter: ^2.10.0
+  google_maps_flutter_web: ^0.5.10
+  google_maps_webservice: ^0.0.20-nullsafety.5
+  flutter_osm_plugin: ^1.3.6
+  flutter_map: ^4.0.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
