proper database added- you can now add, fetch, and remove trips with database storage.

--- a/roadtrip-backend/.env
+++ b/roadtrip-backend/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://pai_aa:beanpot@HackBeanpot.mongodb.net/roadtripDB?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://pai_aa:beanpot@hackbeanpot.k2uwc.mongodb.net/?retryWrites=true&w=majority&appName=HackBeanpot
