--- a/hackbeanpot/android/app/build.gradle
+++ b/hackbeanpot/android/app/build.gradle
@@ -20,7 +20,7 @@ if (flutterRoot == null) {
 
 android {
     namespace = "com.example.hackbeanpot"
-    compileSdk = 34  
+    compileSdkVersion flutter.compileSdkVersion
 
     ndkVersion = flutter.ndkVersion
 
@@ -41,8 +41,8 @@ android {
         applicationId = "com.example.hackbeanpot"
         minSdkVersion = 21  
         targetSdk = 34     
-        versionCode = flutter.versionCode
-        versionName = flutter.versionName
+        versionCode = flutterVersionCode.toInteger()
+        versionName = flutterVersionName
     }
 
     buildTypes {
@@ -59,8 +59,13 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:32.7.0')
-    implementation 'com.google.firebase:firebase-analytics'    
+    implementation 'com.google.firebase:firebase-analytics'
+    // Add Spotify SDK dependencies
+    implementation "com.spotify.android:auth:2.1.0"
+    implementation "com.spotify.android:spotify-player:1.0.0-beta2"
 }
 
 repositories {
+    maven { url "https://jitpack.io" }
+    maven { url "https://maven.spotify.com/repository/public" }
 }
