--- a/hackbeanpot/android/app/src/main/AndroidManifest.xml
+++ b/hackbeanpot/android/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
-        android:label="your_app_name"
+        android:label="hackbeanpot"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
@@ -30,6 +30,22 @@
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+            <!-- Add Spotify deep linking -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data android:scheme="hackbeanpot" />
+            </intent-filter>
+            <!-- Spotify Auth Callback -->
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <data
+                    android:scheme="hackbeanpot"
+                    android:host="callback" />
+            </intent-filter>
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
@@ -40,8 +56,8 @@
             android:name="io.flutter.embedding.engine.FlutterEngine"
             android:value="flutter"/>
         <meta-data
-            android:name="com.google.android.geo.AIzaSyAvxU4bOHCvcKBHeLUf-H7-v_mWSe8h8W0
-            android:value="YOUR-API-KEY"/>
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAvxU4bOHCvcKBHeLUf-H7-v_mWSe8h8W0"/>
     </application>
     <!-- Required to query activities that can process text, see:
          https://developer.android.com/training/package-visibility and
@@ -53,5 +69,7 @@
             <action android:name="android.intent.action.PROCESS_TEXT"/>
             <data android:mimeType="text/plain"/>
         </intent>
+        <!-- Add Spotify package query -->
+        <package android:name="com.spotify.music" />
     </queries>
 </manifest>
