--- a/hackbeanpot/pubspec.yaml
+++ b/hackbeanpot/pubspec.yaml
@@ -11,7 +11,8 @@ dependencies:
     sdk: flutter
   http: ^0.13.5
   image_picker: ^1.0.7
-  image_cropper: ^1.4.0
+  # comment out image_cropper temporarily
+  image_cropper: ^4.0.1
   geolocator: ^10.1.0
   cupertino_icons: ^1.0.8
   firebase_core: ^3.11.0
