--- a/hackbeanpot/android/build.gradle
+++ b/hackbeanpot/android/build.gradle
@@ -1,16 +1,13 @@
 buildscript {
-    ext.kotlin_version = '1.8.22'
     repositories {
         google()
         mavenCentral()
         maven { url "https://jitpack.io" }
-        maven { url "https://maven.spotify.com/repository/public" }
     }
 
     dependencies {
         classpath 'com.android.tools.build:gradle:8.2.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath 'com.google.gms:google-services:4.4.0'
+        // Remove Kotlin Gradle plugin
     }
 }
 
@@ -18,7 +15,7 @@ allprojects {
     repositories {
         google()
         mavenCentral()
-        maven { url "https://maven.spotify.com/repository/public" }
+        maven { url "https://jitpack.io" }
     }
 }
 
