--- a/hackbeanpot/android/app/build.gradle
+++ b/hackbeanpot/android/app/build.gradle
@@ -1,7 +1,5 @@
 plugins {
     id "com.android.application"
-    id "kotlin-android"
-    id "com.google.gms.google-services"
     id "dev.flutter.flutter-gradle-plugin"
 }
 
@@ -18,6 +16,16 @@ if (flutterRoot == null) {
     throw new FileNotFoundException("Flutter SDK not found. Define location with flutter.sdk in the local.properties file.")
 }
 
+def flutterVersionCode = localProperties.getProperty('flutter.versionCode')
+if (flutterVersionCode == null) {
+    flutterVersionCode = '1'
+}
+
+def flutterVersionName = localProperties.getProperty('flutter.versionName')
+if (flutterVersionName == null) {
+    flutterVersionName = '1.0'
+}
+
 android {
     namespace = "com.example.hackbeanpot"
     compileSdkVersion flutter.compileSdkVersion
@@ -25,12 +33,13 @@ android {
     ndkVersion = flutter.ndkVersion
 
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_17
-        targetCompatibility = JavaVersion.VERSION_17
+        sourceCompatibility = JavaVersion.VERSION_1_8
+        targetCompatibility = JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true  // Enable core library desugaring
     }
 
     kotlinOptions {
-        jvmTarget = '17'
+        jvmTarget = '1.8'
     }
 
     sourceSets {
@@ -39,7 +48,7 @@ android {
 
     defaultConfig {
         applicationId = "com.example.hackbeanpot"
-        minSdkVersion = 21  
+        minSdkVersion = 23  // Update this line to 23
         targetSdk = 34     
         versionCode = flutterVersionCode.toInteger()
         versionName = flutterVersionName
@@ -57,15 +66,17 @@ flutter {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation platform('com.google.firebase:firebase-bom:32.7.0')
     implementation 'com.google.firebase:firebase-analytics'
-    // Add Spotify SDK dependencies
-    implementation "com.spotify.android:auth:2.1.0"
-    implementation "com.spotify.android:spotify-player:1.0.0-beta2"
+    implementation 'com.spotify.android:auth:1.2.5'  // Use stable version
+    implementation 'com.google.code.gson:gson:2.10'
+    implementation "com.github.stuhlmeier:kotlin-events:v2.0"
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'  // Add desugaring library
 }
 
 repositories {
+    google()
+    mavenCentral()
     maven { url "https://jitpack.io" }
     maven { url "https://maven.spotify.com/repository/public" }
 }
